--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -14,3 +14,5 @@ jobs:
         with:
           fetch-depth: '0'  
       - run: ./mirror.sh
+        env:
+          GH_TOKEN: ${{ github.token }}
